--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -190,4 +190,7 @@
   <data name="UnitySubsystemsManifest" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UnitySubsystemsManifest.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="OpenVRSettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OpenVRSettings.asset;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
